MComix 0.92 (4.0.5)

    - Fixed a bug that made MComix save preview thumbnails to disk
      even if this behaviour was disabled in the preferences window.

    - Added limited support for password-protected ZIP and RAR archives.
      For ZIP archives, Python >= 2.6 is required. For RAR archives,
      only extraction with libunrar/unrar.dll is supported.

    - If a library collection has sub-collections, the books from these
      sub-collections will be shown as well when the collection is opened.

    - The "Bookmarks" menu can be accessed via the normal menu bar again.
      (by Alan Horkan)

    - If applications for extracting RAR or 7Z archives aren't found on
      start-up, MComix will no longer allow selecting the corresponding file
      types in the "Open" dialog.
      (suggested by Alan Horkan)

    - The "Copy" menu item will now copy the current file name to the
      clipboard, in addition to the currently opened page as bitmap.

    - The currently opened file or archive can now be deleted using
      File -> Delete, or by pressing F8.

    - Added an option to use the first page of an archive as application
      icon instead of the standard MComix icon. (inspired by Alexandr
      Domrachev)

    - Added an option to manually change the user interface language
      used by MComix. Changes to the language require an application
      restart to take effect.

    - Added the following new command line switches:
      -m                  Manga mode
      -s                  Slideshow
      -d                  Double-page mode
      -b, -w, -h          Fit best/width/height, respectively.
      (suggested by Anonymous on the Comix tracker, adapted by Alan Horkan)
      -W[all|warn|error]  Set log level (default is 'warn')

    - The following preference items have been removed: 

      "Automated crash recovery": No longer necessary.
      "Show page numbers": Enabled by default.
      "Avoid unintentional page flips": Enabled by default.