@@ -34,6 +34,8 @@ RESPONSE_IMPORT = 5
 RESPONSE_APPLY_CHANGES = 6
 RESPONSE_SAVE_AS = 7
 
+SORT_NAME, SORT_PATH, SORT_SIZE = 1, 2, 3
+
 ACCEPTED_COMMENT_EXTENSIONS = ['txt', 'nfo']
 SUPPORTED_IMAGE_REGEX = re.compile(r'\.(jpg|jpeg|png|gif|tif|tiff|bmp|ppm|pgm|pbm)\s*$', re.I)
 SUPPORTED_ARCHIVE_REGEX = re.compile(r'\.(cbz|cbr|cbt|zip|rar|tar|gz|bz2|bzip2|7z)\s*$', re.I)
